# demo-rust-fhir-sdk

./: Cargo.toml  README.md  cspell.json
examples/re-authenticate-via-callback/: main.rs
examples/read-resource/: main.rs
examples/resource-identifier-access/: main.rs
examples/search-patients/: main.rs
